# kibel

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.ja.md  README.md  SECURITY.md  deny.toml
.agent/: PLANS.md
.agent/security/: non_regression.red_blue.kibel.json
.github/workflows/: ci.yml  quality-observe.yml  release.yml  schema-refresh.yml
crates/kibel/: Cargo.toml
crates/kibel-client/: Cargo.toml
crates/kibel-client/src/: auth.rs  client.rs  config.rs  error.rs  generated_create_note_contract.rs  generated_resource_contracts.rs  lib.rs  store.rs
crates/kibel-tools/: Cargo.toml
crates/kibel-tools/operation_documents/: attach_note_to_folder.graphql  create_comment.graphql  create_comment_reply.graphql  create_folder.graphql  create_note.graphql  get_feed_sections.graphql  get_folder.graphql  get_folder_from_path.graphql  get_folders.graphql  get_groups.graphql  get_note.graphql  get_note_from_path.graphql  get_notes.graphql  move_note_to_another_folder.graphql  search_folder.graphql  search_note.graphql  update_note_content.graphql
crates/kibel-tools/src/: main.rs  tests.rs
crates/kibel/src/: cli.rs  error.rs  main.rs
crates/kibel/tests/: e2e_dynamic_stub_server.rs  e2e_resource_rollout.rs  e2e_stub_transport.rs  help_surface.rs
crates/kibel/tests/support/: dynamic_graphql_stub.rs  mod.rs
docs/: README.md  agent-skills.md  agentic-rag-architecture.md  architecture.md  cli-interface.md  graphql-tooling-roadmap.md  implementation-policy.md  maintenance.md  schema-lifecycle.md
research/schema/: create_note_contract.snapshot.json  resource_contracts.endpoint.snapshot.json  resource_contracts.snapshot.json
schema/contracts/: create_note_contract.snapshot.json  resource_contracts.snapshot.json
schema/introspection/: resource_contracts.endpoint.snapshot.json
scripts/: check_skill_safety.sh  install_kibel_skills.sh  render_homebrew_formula.sh
skills/: README.md
skills/kibel-agentic-rag/: SKILL.md
skills/kibel-agentic-rag/references/: workflow.md
skills/kibel-agentic-rag/templates/: ambiguity_planner_card.md  evidence_answer_template.md  profile_scorecard.md
skills/kibel-agentic-search/: SKILL.md
skills/kibel-agentic-search/references/: commands.md
skills/kibel-agentic-search/templates/: recall_precision_loop.sh
skills/kibel-cli-operator/: SKILL.md
skills/kibel-cli-operator/references/: command-map.md
skills/kibel-cli-operator/templates/: graphql_query.sh
