[workspace]
members = ["crates/kibel-client", "crates/kibel", "crates/kibel-tools"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/masayannuu/kibel"
homepage = "https://github.com/masayannuu/kibel"
rust-version = "1.89"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
directories = "5.0"
keyring = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
toml = "0.8"
ureq = "2.10"
rpassword = "7.4"
