[package]
name = "kibel-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Reusable Rust client library for Kibela GraphQL API"
readme = "../../README.md"
keywords = ["kibela", "graphql", "client"]
categories = ["api-bindings"]

[features]
default = []
test-hooks = []

[dependencies]
directories.workspace = true
keyring.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
ureq.workspace = true

[dev-dependencies]
tempfile = "3.13"
