[package]
name = "kibel-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Internal schema/contract maintenance tooling for kibel"
readme = "../../README.md"
publish = false

[dependencies]
clap.workspace = true
serde_json.workspace = true
tempfile = "3.13"
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
ureq.workspace = true
