[package]
name = "kibel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Production-focused Kibela CLI"
readme = "../../README.md"
keywords = ["kibela", "cli", "graphql"]
categories = ["command-line-utilities"]

[dependencies]
clap.workspace = true
clap_complete.workspace = true
kibel-client = { version = "0.2.8", path = "../kibel-client" }
serde.workspace = true
serde_json.workspace = true
rpassword.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
kibel-client = { version = "0.2.8", path = "../kibel-client", features = ["test-hooks"] }
pretty_assertions = "1.4"
